--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinControl App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body class="bg-gray-900 text-white">
+  <body class="bg-gradient-to-br from-slate-100 via-slate-200 to-slate-300 text-slate-800 font-sans">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
