--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-gradient-to-br from-slate-100 via-slate-200 to-slate-300 text-slate-800 font-sans">
+  <body
+    class="font-sans"
+    style="background: linear-gradient(to bottom right, var(--bg-secondary), var(--bg-accent), var(--bg-primary)); color: var(--text-primary);"
+  >
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
